--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-gifted-charts": "^1.3.16",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-tab-view": "^3.5.2",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2"
