--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.4.0",
+    "formik": "^2.4.5",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.6",
@@ -28,7 +29,8 @@
     "react-native-tab-view": "^3.5.2",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
